Added build script

--- a/src/JwAnalyzer/JwAnalyzer.csproj
+++ b/src/JwAnalyzer/JwAnalyzer.csproj
@@ -7,15 +7,15 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <PackageId>JwAnalyzer</PackageId>
-        <PackageVersion>1.0.0.0</PackageVersion>
+        <PackageId>wk.JwAnalyzer</PackageId>
+        <Version>0.1.1</Version>
         <Authors>wk</Authors>
         <PackageLicenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</PackageLicenseUrl>
         <PackageProjectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</PackageProjectUrl>
         <PackageIconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</PackageIconUrl>
         <RepositoryUrl>http://REPOSITORY_URL_HERE_OR_DELETE_THIS_LINE</RepositoryUrl>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-        <Description>JwAnalyzer</Description>
+        <Description>Jw Analyzer</Description>
         <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
         <Copyright>Copyright</Copyright>
         <PackageTags>JwAnalyzer, analyzers</PackageTags>
