--- a/src/JwAnalyzer/JwAnalyzer.csproj
+++ b/src/JwAnalyzer/JwAnalyzer.csproj
@@ -1,19 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <Version>0.1.3</Version>
         <TargetFramework>netstandard1.3</TargetFramework>
         <IncludeBuildOutput>false</IncludeBuildOutput>
-        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    </PropertyGroup>
-
-    <PropertyGroup>
+        <!-- <GeneratePackageOnBuild>True</GeneratePackageOnBuild> -->
         <PackageId>wk.JwAnalyzer</PackageId>
-        <Version>0.1.1</Version>
         <Authors>wk</Authors>
-        <PackageLicenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</PackageLicenseUrl>
-        <PackageProjectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</PackageProjectUrl>
-        <PackageIconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</PackageIconUrl>
-        <RepositoryUrl>http://REPOSITORY_URL_HERE_OR_DELETE_THIS_LINE</RepositoryUrl>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <Description>Jw Analyzer</Description>
         <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
